scorz/web/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scorz-portal
  namespace: scorz-portal
spec:
  replicas: 3
  selector:
    matchLabels:
      app: scorz-portal
  template:
    metadata:
      labels:
        app: scorz-portal
    spec:
      containers:
        - name: scorz-container
          image: git.diktup.cloud:5050/sifca/sifca-monorepo:scorz-portal-prod-1.0
          #imagePullPolicy: Always
          imagePullPolicy: IfNotPresent
          #imagePullPolicy: Never
          ports:
            - containerPort: 4000
      imagePullSecrets:
        - name: gitlab-registry-secret
