scorz/web/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: scorz-portal-service
  namespace: scorz-portal
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 4000
  selector:
    app: scorz-portal
